--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -22,7 +22,7 @@
           <ion-col no-padding class="column">
             <button ion-button icon-left small full color="light" menuClose (click)="goBackToBuildingList()">
               <ion-icon name="undo"></ion-icon>
-              Retourner à la liste des bâtiments
+              {{'backToBuildingList' | translate}}
             </button>
           </ion-col>
         </ion-row>
