--- a/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
+++ b/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
@@ -1,4 +1,3 @@
-
 <ion-header class="page-header">
   <ion-navbar>
     <ion-buttons left>
@@ -6,22 +5,18 @@
         <ion-icon name="arrow-back"></ion-icon>
       </button>
     </ion-buttons>
-
-    <ion-title>Sélection d'un thème</ion-title>
+    <ion-title>{{'themeSelection' | translate}}</ion-title>
   </ion-navbar>
   <ion-searchbar [(ngModel)]="currentSearch" (ionInput)="onSearch($event)"></ion-searchbar>
 </ion-header>
 
-
 <ion-content>
   <ion-list class="list-items">
-
     <ion-item-group>
-      <button ion-item (click)="onCreateTheme()" color="caucaGold">Créer un nouveau thème...</button>
+      <button ion-item (click)="onCreateTheme()" color="caucaGold">{{'addThemeButton' | translate}}</button>
       <button ion-item *ngFor="let theme of filteredThemes" (click)="onSelectExistingTheme(theme)">
         {{theme}}
       </button>
     </ion-item-group>
   </ion-list>
-
 </ion-content>
