--- a/src/pages/inspections/inspections.html
+++ b/src/pages/inspections/inspections.html
@@ -1,4 +1,4 @@
 <ion-tabs>
-    <ion-tab [root]="inspectionListRoot" tabTitle="Par liste" tabIcon="list-box"></ion-tab>
-    <ion-tab [root]="inspectionMapRoot" tabTitle="Par carte" tabIcon="map"></ion-tab>
+    <ion-tab [root]="inspectionListRoot" tabTitle="{{'inspectionByList' | translate}}" tabIcon="list-box"></ion-tab>
+    <ion-tab [root]="inspectionMapRoot" tabTitle="{{'inspectionByMap' | translate}}" tabIcon="map"></ion-tab>
 </ion-tabs>
