feat(#106) Add translate initialization in http service

--- a/src/pages/inspection-question-summary/inspection-question-summary.html
+++ b/src/pages/inspection-question-summary/inspection-question-summary.html
@@ -1,7 +1,7 @@
 <ion-header class="page-header">
 
     <ion-navbar>
-        <ion-title>Synthèse du questionnaire</ion-title>
+        <ion-title>{{'surveySummary' | translate}}</ion-title>
     </ion-navbar>
 
 </ion-header>
