--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <script src="./assets/ol.js"></script>
