feat(#101) Hot fix on inspection visit header translation

--- a/src/pages/inspection-visit/inspection-visit.html
+++ b/src/pages/inspection-visit/inspection-visit.html
@@ -6,7 +6,7 @@
 
 <ion-content>
     <ion-list class="list-items">
-        <ion-list-header>{{'inspectionVisitCanceled'}}</ion-list-header>
+        <ion-list-header>{{'inspectionVisitCanceled' | translate}}</ion-list-header>
         <ion-item-group>
             <ion-item-divider>{{'visitCanceledMotive' | translate}}</ion-item-divider>
             <div *ngIf="ownerAbsent">
