feat(#101) Hot fix for translation

--- a/src/pages/intervention-course-detail/intervention-course-detail.html
+++ b/src/pages/intervention-course-detail/intervention-course-detail.html
@@ -9,6 +9,7 @@
   <ion-list [formGroup]="form" class="list-items">
     <ion-item-divider>{{'fireStation' | translate}}</ion-item-divider>
     <ion-item [class.validation-error-control]="form.get('idFirestation').hasError('required')">
+      <ion-label [hidden]="true">{{'fireStation' | translate}}</ion-label>
       <ion-select class="select-firestation" placeholder="{{'chooseFireStation' | translate}}" formControlName="idFirestation">
         <ion-option *ngFor="let fire of firestations | orderBy:'name'" [value]="fire.id">{{fire.name}}</ion-option>
       </ion-select>
