feat(#101) Hot fix from code review

--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -5,7 +5,7 @@
                 <ion-icon name="arrow-back"></ion-icon>
             </button>
         </ion-buttons>
-        <ion-title>{{'abnormalityDetail' | translate}}</ion-title>
+        <ion-title>{{'anomalityDetail' | translate}}</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -32,7 +32,7 @@
         <ion-buttons left>
             <button ion-button icon-start (click)="onDeleteAnomaly()">
                 <ion-icon name="trash"></ion-icon>
-                {{'abnormalityDelete' | translate}}
+                {{'anomalityDelete' | translate}}
             </button>
         </ion-buttons>
     </ion-navbar>
