--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
@@ -40,8 +40,8 @@
                 <ion-label>{{'tank' | translate}}</ion-label>
                 <ion-select formControlName="tankTypeMasked">
                     <ion-option value="0">{{'tankTypeUndetermined' | translate}}</ion-option>
-                    <ion-option value="1">{{'tankTypeUnderGround' | translate}}</ion-option>
-                    <ion-option value="2">{{'tankTypeAboveGround' | translate}}</ion-option>
+                    <ion-option value="1">{{'tankTypeUnderground' | translate}}</ion-option>
+                    <ion-option value="2">{{'tankTypeAboveground' | translate}}</ion-option>
                 </ion-select>
             </ion-item>
             <ion-item>
