--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet"/>
   <meta name="theme-color" content="#4e8ef7">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
