feat(#105): Add validation on hazardous material measuringUnit
when capacity is superior than 0

--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
@@ -59,7 +59,7 @@
                         <ion-item>
                             <ion-input item-end type="number" [pattern]="decimalPattern"
                                        placeholder="{{'capacity' | translate}}"
-                                       formControlName="capacityContainerMasked"></ion-input>
+                                       formControlName="capacityContainerMasked" (ionChange)="onCapacityChanged()"></ion-input>
                         </ion-item>
                     </ion-col>
                     <ion-col width-50>
