--- a/src/pages/intervention-implantation-plan-sketch/intervention-implantation-plan-sketch.html
+++ b/src/pages/intervention-implantation-plan-sketch/intervention-implantation-plan-sketch.html
@@ -1,11 +1,7 @@
-<!-- Generated template for the InterventionImplantationPlanSketchPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation. -->
 <ion-header>
 
     <ion-navbar>
-        <ion-title>Éditer l'image</ion-title>
+        <ion-title>{{'implantationPlan' | translate}}</ion-title>
     </ion-navbar>
 
 </ion-header>
@@ -36,14 +32,14 @@
                 class="loginnavbtn"
                 (click)="onOkay()"
             >
-                OK
+                {{'done' | translate}}
             </button>
             <button
                 ion-button
                 class="loginnavbtn"
                 (click)="onCancel()"
             >
-                Cancel
+                {{'cancel' | translate}}
             </button>
         </ion-buttons>
     </ion-toolbar>
