feat(#51) Add fire hydrant form and load methods

--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -16,3 +16,14 @@
     </button>
   </ion-list>
 </ion-content>
+
+<ion-footer class="page-footer">
+  <ion-toolbar>
+    <ion-buttons>
+      <button ion-button icon-left (click)="createFireHydrant()">
+        <ion-icon name="add-circle"></ion-icon>
+        {{'addFireHydrantButton' | translate}}
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
