--- a/src/pages/intervention-water-supplies/intervention-water-supplies.html
+++ b/src/pages/intervention-water-supplies/intervention-water-supplies.html
@@ -32,7 +32,7 @@
       <ion-buttons>
       <button ion-button icon-left (click)="onItemClick(plan?.idCity)">
         <ion-icon name="add-circle"></ion-icon>
-        {{'add' | translate}}...
+        {{'addButton' | translate}}
       </button>
       </ion-buttons>
     </ion-toolbar>
