--- a/src/pages/fire-hydrant/fire-hydrant.html
+++ b/src/pages/fire-hydrant/fire-hydrant.html
@@ -145,13 +145,14 @@
                         [dataService]="laneService"></search-box>
             </div>
             <div *ngIf="form.value.locationType == fireHydrantLocationType.Coordinates">
-                <div class="map-label">
+                <div class="map-label" (click)="getMapLocalization()">
                     <span class="custom-item-label">Localisation* : </span>
-                    <ion-icon name="icon-map" (click)="getMapLocalization()"></ion-icon>
+                    <ion-icon name="icon-map" large></ion-icon>
                 </div>
                 <ion-item>
-                    <ion-input item-end formControlName="coordinates" type="number"
-                               placeholder="{{'position' | translate}}"></ion-input>
+
+                    <ion-input item-end formControlName="coordinates" type="number" [disabled]="true"
+                               placeholder="{{'fireHydrantGeoPositionHolder' | translate}}"></ion-input>
                 </ion-item>
             </div>
             <div *ngIf="form.value.locationType == fireHydrantLocationType.Text">
