--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -6,9 +6,14 @@
 </ion-header>
 <ion-content>
   <ion-list class="list-items">
-    <ion-list-header>{{'fireHydrants' | translate}}</ion-list-header>
-    <button ion-item *ngFor="let hydrant of filteredCityFireHydrantList | orderBy:'number'" (click)="AddBuildingFireHydrant(hydrant.id)">
+    <ion-list-header>
+      {{'fireHydrants' | translate}}
+      <ion-icon item-end (click)="onEditModeChanged()" name="create" [style.color]="editModeColor"></ion-icon>
+    </ion-list-header>
+
+    <button ion-item detail-none *ngFor="let hydrant of filteredCityFireHydrantList | orderBy:'number'" (click)="AddBuildingFireHydrant(hydrant.id)">
       <ion-icon name="icon-fire-hydrant" item-start [style.color]="hydrant.color" large></ion-icon>
+      <ion-icon class="custom-icon-select" *ngIf="editMode" name="arrow-forward" item-end large></ion-icon>
         <div>
           <h2>{{hydrant.number}}</h2>
           <p>{{hydrant.address}}</p>
