--- a/src/pages/fire-hydrant/fire-hydrant.html
+++ b/src/pages/fire-hydrant/fire-hydrant.html
@@ -9,19 +9,23 @@
     <ion-list [formGroup]="form" class="list-items">
         <ion-item-group>
             <ion-item-divider>{{'generalInformation' | translate}}</ion-item-divider>
-            <ion-item>
+            <ion-item [class.invalid]="!form.controls.idFireHydrantType.valid">
                 <ion-label>{{'type' | translate}}</ion-label>
                 <ion-select formControlName="idFireHydrantType">
                     <ion-option *ngFor="let ftype of fireHydrantTypes" [value]="ftype.id">{{ftype.name}}</ion-option>
                 </ion-select>
             </ion-item>
-            <ion-item>
+            <div class="validation-error-text" *ngIf="!form.controls.idFireHydrantType.valid">{{'requiredInformation' | translate}}</div>
+
+            <ion-item [class.invalid]="!form.controls.number.valid">
                 <ion-label>{{'number' | translate}}</ion-label>
                 <ion-input item-end formControlName="number" maxlength="10" type="text"
                            placeholder="{{'number' | translate}}"></ion-input>
             </ion-item>
+            <div class="validation-error-text" *ngIf="!form.controls.number.valid">{{'requiredInformation' | translate}}</div>
+
             <ion-row class="colorselect color_{{form.value.color.slice(1,7)}}">
-                <ion-item>
+                <ion-item [class.invalid]="!form.controls.color.valid">
                     <ion-label>{{'color' | translate}}</ion-label>
                     <ion-select formControlName="color" (click)="prepareColorSelector()">
                         <ion-option (ionSelect)="selectColor(color.color)" *ngFor="let color of hydrantColors" [value]="color.color">
@@ -29,91 +33,122 @@
                         </ion-option>
                     </ion-select>
                 </ion-item>
+                <div class="validation-error-text" *ngIf="!form.controls.color.valid">{{'requiredInformation' | translate}}</div>
             </ion-row>
         </ion-item-group>
 
         <ion-item-group>
             <ion-item-divider>{{'outflow' | translate}}</ion-item-divider>
-            <ion-item>
+            <ion-item [class.invalid]="!form.controls.idOperatorTypeRate.valid">
                 <ion-label>{{'operator' | translate}}</ion-label>
                 <ion-select formControlName="idOperatorTypeRate" placeholder="{{'operator' | translate}}">
                     <ion-option *ngFor="let op of operators" [value]="op.id">{{op.symbol}}</ion-option>
                 </ion-select>
             </ion-item>
+            <div class="validation-error-text" *ngIf="!form.controls.idOperatorTypeRate.valid">{{'requiredInformation' | translate}}</div>
+
             <ion-grid>
                 <ion-row>
                     <ion-col width-50>
-                        <ion-item>
+                        <ion-item [class.invalid]="!form.controls.rateFrom.valid">
                             <ion-label>{{'from' | translate}}</ion-label>
                             <ion-input item-end formControlName="rateFrom" maxlength="10" type="number"
                                        placeholder="{{'number' | translate}}"></ion-input>
                         </ion-item>
+                        <div class="validation-error-text" *ngIf="!form.controls.rateFrom.valid">{{'requiredInformation' | translate}}</div>
                     </ion-col>
                     <ion-col width-50>
-                        <ion-item>
+                        <ion-item [class.invalid]="!form.controls.rateTo.valid">
                             <ion-label>{{'to' | translate}}</ion-label>
                             <ion-input item-end formControlName="rateTo" maxlength="10" type="number"
                                        placeholder="{{'number' | translate}}"></ion-input>
                         </ion-item>
+                        <div class="validation-error-text" *ngIf="!form.controls.rateTo.valid">{{'requiredInformation' | translate}}</div>
                     </ion-col>
                 </ion-row>
             </ion-grid>
-            <ion-item>
+
+            <ion-item [class.invalid]="!form.controls.idUnitOfMeasureRate.valid">
                 <ion-label>{{'unit' | translate}}</ion-label>
                 <ion-select formControlName="idUnitOfMeasureRate" placeholder="{{'unit' | translate}}">
                     <ion-option *ngFor="let unit of rateMeasuringUnit" [value]="unit.id">{{unit.name}}
                     </ion-option>
                 </ion-select>
             </ion-item>
+            <div class="validation-error-text" *ngIf="!form.controls.idUnitOfMeasureRate.valid">{{'requiredInformation' | translate}}</div>
         </ion-item-group>
 
         <ion-item-group>
             <ion-item-divider>{{'pressure' | translate}}</ion-item-divider>
-            <ion-item>
+            <ion-item [class.invalid]="!form.controls.idOperatorTypePressure.valid">
                 <ion-label>{{'operator' | translate}}</ion-label>
-                <ion-select formControlName="idOperatorTypeRate" placeholder="{{'operator' | translate}}">
+                <ion-select formControlName="idOperatorTypePressure" placeholder="{{'operator' | translate}}">
                     <ion-option *ngFor="let op of operators" [value]="op.id">{{op.symbol}}</ion-option>
                 </ion-select>
             </ion-item>
+            <div class="validation-error-text" *ngIf="!form.controls.idOperatorTypePressure.valid">{{'requiredInformation' | translate}}</div>
+
             <ion-grid>
                 <ion-row>
                     <ion-col width-50>
-                        <ion-item>
+                        <ion-item [class.invalid]="!form.controls.pressureFrom.valid">
                             <ion-label>{{'from' | translate}}</ion-label>
                             <ion-input item-end formControlName="pressureFrom" maxlength="10" type="number"
                                        placeholder="{{'number' | translate}}"></ion-input>
                         </ion-item>
+                        <div class="validation-error-text" *ngIf="!form.controls.pressureFrom.valid">{{'requiredInformation' | translate}}</div>
                     </ion-col>
                     <ion-col width-50>
-                        <ion-item>
+                        <ion-item [class.invalid]="!form.controls.pressureTo.valid">
                             <ion-label>{{'to' | translate}}</ion-label>
                             <ion-input item-end formControlName="pressureTo" maxlength="10" type="number"
                                        placeholder="{{'number' | translate}}"></ion-input>
                         </ion-item>
+                        <div class="validation-error-text" *ngIf="!form.controls.pressureTo.valid">{{'requiredInformation' | translate}}</div>
                     </ion-col>
                 </ion-row>
             </ion-grid>
+
             <ion-item>
-                <ion-label>{{'unit' | translate}}</ion-label>
+                <ion-label [class.invalid]="!form.controls.idUnitOfMeasurePressure.valid">{{'unit' | translate}}</ion-label>
                 <ion-select formControlName="idUnitOfMeasurePressure" placeholder="{{'unit' | translate}}">
                     <ion-option *ngFor="let unit of pressureMeasuringUnit" [value]="unit.id">{{unit.name}}</ion-option>
                 </ion-select>
             </ion-item>
+            <div class="validation-error-text" *ngIf="!form.controls.idUnitOfMeasurePressure.valid">{{'requiredInformation' | translate}}</div>
 
         </ion-item-group>
 
         <ion-item-group>
             <ion-item-divider>{{'localization' | translate}}</ion-item-divider>
-            <ion-item>
+            <ion-item [class.invalid]="!form.controls.locationType.valid">
                 <ion-label>{{'type' | translate}}</ion-label>
-                <ion-select formControlName="locationType">
+                <ion-select formControlName="locationType" (ionChange)="refreshLocationTypeValidator()">
                     <ion-option *ngFor="let key of fireHydrantLocationTypeKeys" [value]="key">
                         {{"enumFireHydrantLocationType."+fireHydrantLocationType[key] | translate}}
                     </ion-option>
                 </ion-select>
             </ion-item>
+            <div class="validation-error-text" *ngIf="!form.controls.locationType.valid">{{'requiredInformation' | translate}}</div>
+
+            <div *ngIf="form.value.locationType == fireHydrantLocationType.Address || form.value.locationType ==  fireHydrantLocationType.LaneAndIntersection">
+
+                <search-box [class.invalid]="!form.controls.idLane.valid && (form.value.locationType == fireHydrantLocationType.LaneAndIntersection || form.value.locationType ==  fireHydrantLocationType.LaneAndIntersection)"
+                            description="{{'lane' | translate}}"
+                            formControlName="idLane"
+                            [displayFieldName]="'name'"
+                            [keyFieldName]="'id'"
+                            [dataService]="laneService"></search-box>
+                <div class="validation-error-text"
+                     *ngIf="!form.controls.idLane.valid &&
+                            (form.value.locationType == fireHydrantLocationType.LaneAndIntersection ||
+                             form.value.locationType ==  fireHydrantLocationType.LaneAndIntersection)">
+                    {{'requiredInformation' | translate}}
+                </div>
+            </div>
+
             <div *ngIf="form.value.locationType == fireHydrantLocationType.Address">
-                <ion-item>
+                <ion-item [class.invalid]="!form.controls.addressLocationType.valid && form.value.locationType == fireHydrantLocationType.Address">
                     <ion-label>{{'type' | translate}}</ion-label>
                     <ion-select formControlName="addressLocationType">
                         <ion-option *ngFor="let key of addressLocalizationTypeKeys" [value]="key">
@@ -121,52 +156,48 @@
                         </ion-option>
                     </ion-select>
                 </ion-item>
-                <ion-item>
+                <div class="validation-error-text" *ngIf="!form.controls.addressLocationType.valid">{{'requiredInformation' | translate}}</div>
+
+                <ion-item [class.invalid]="!form.controls.civicNumber.valid && form.value.locationType == fireHydrantLocationType.Address">
                     <ion-label>{{'civicNumber' | translate}}</ion-label>
                     <ion-input item-end formControlName="civicNumber" maxlength="10" type="text"
                                placeholder="{{'civicNumber' | translate}}"></ion-input>
                 </ion-item>
-                <search-box
-                        description="{{'lane' | translate}}"
-                        formControlName="idLane"
-                        [displayFieldName]="'name'"
-                        [keyFieldName]="'id'"
-                        [dataService]="laneService"></search-box>
+                <div class="validation-error-text" *ngIf="!form.controls.civicNumber.valid">{{'requiredInformation' | translate}}</div>
             </div>
             <div *ngIf="form.value.locationType == fireHydrantLocationType.LaneAndIntersection">
-                <search-box
-                        description="{{'lane' | translate}}"
-                        formControlName="idLane"
-                        [displayFieldName]="'name'"
-                        [keyFieldName]="'id'"
-                        [dataService]="laneService"></search-box>
-                <search-box
+
+                <search-box [class.invalid]="!form.controls.idIntersection.valid && form.value.locationType == fireHydrantLocationType.LaneAndIntersection"
                         description="{{'transversal' | translate}}"
                         formControlName="idIntersection"
                         [displayFieldName]="'name'"
                         [keyFieldName]="'id'"
                         [dataService]="laneService"></search-box>
+                <div class="validation-error-text" *ngIf="!form.controls.idIntersection.valid">{{'requiredInformation' | translate}}</div>
+
             </div>
             <div *ngIf="form.value.locationType == fireHydrantLocationType.Coordinates">
                 <div class="map-label" (click)="getMapLocalization()">
-                    <span class="custom-item-label">Localisation* : </span>
+                    <span class="custom-item-label">{{'localization' | translate}}</span>
                     <ion-icon name="icon-map" large></ion-icon>
                 </div>
-                <ion-item>
-
-                    <ion-input item-end formControlName="coordinates" type="number" [disabled]="true"
+                <ion-item  [class.invalid]="!form.controls.coordinates.valid && form.value.locationType == fireHydrantLocationType.Coordinates">
+                    <ion-input class="left-align-input" formControlName="coordinates" [disabled]="true"
                                placeholder="{{'fireHydrantGeoPositionHolder' | translate}}"></ion-input>
                 </ion-item>
+                <div class="validation-error-text" *ngIf="!form.controls.coordinates.valid">{{'requiredInformation' | translate}}</div>
             </div>
             <div *ngIf="form.value.locationType == fireHydrantLocationType.Text">
                 <div>
                     <ion-label class="custom-item-label">{{'location' | translate}}</ion-label>
                 </div>
-                <ion-item>
-                    <ion-textarea item-end formControlName="physicalLocation" type="text"
+                <ion-item [class.invalid]="!form.controls.physicalLocation.valid && form.value.locationType == fireHydrantLocationType.Text">
+                    <ion-textarea class="left-align-input" item-end formControlName="physicalLocation" type="text"
                                   placeholder="{{'location' | translate}}"></ion-textarea>
                 </ion-item>
+                <div class="validation-error-text" *ngIf="!form.controls.physicalLocation.valid">{{'requiredInformation' | translate}}</div>
             </div>
+
         </ion-item-group>
     </ion-list>
 </ion-content>
