feat(#115) Red title bar for Sketch page

--- a/src/pages/intervention-implantation-plan-sketch/intervention-implantation-plan-sketch.html
+++ b/src/pages/intervention-implantation-plan-sketch/intervention-implantation-plan-sketch.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color="caucaRed">
         <ion-title>{{'implantationPlan' | translate}}</ion-title>
     </ion-navbar>
 
