--- a/src/pages/building-child-picture-edition/building-child-picture-edition.html
+++ b/src/pages/building-child-picture-edition/building-child-picture-edition.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   
-    <ion-navbar>
+    <ion-navbar color="caucaRed">
       <ion-title>{{'editPicture' | translate}}</ion-title>
     </ion-navbar>
   
