--- a/src/pages/map-localization/map-localization.html
+++ b/src/pages/map-localization/map-localization.html
@@ -1,18 +1,22 @@
-<!--
-  Generated template for the MapLocalizationPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
+<ion-header class="page-header">
   <ion-navbar>
-    <ion-title>map-localization</ion-title>
+    <ion-title>{{'cartographyLocation' | translate}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content>
+  <div id="map" data-tap-disabled="true">
+  </div>
 </ion-content>
+
+<ion-footer class="page-footer">
+  <ion-navbar>
+    <ion-buttons>
+      <button ion-button  icon-start (click)="getLocalization()">
+        <ion-icon name="locate"></ion-icon>
+        {{'locate' | translate}}
+      </button>
+    </ion-buttons>
+  </ion-navbar>
+</ion-footer>
