--- a/src/pages/fire-hydrant/fire-hydrant.html
+++ b/src/pages/fire-hydrant/fire-hydrant.html
@@ -192,7 +192,7 @@
                     <ion-label class="custom-item-label">{{'location' | translate}}</ion-label>
                 </div>
                 <ion-item [class.invalid]="!form.controls.physicalPosition.valid && form.value.locationType == fireHydrantLocationType.Text">
-                    <ion-textarea class="left-align-input" item-end formControlName="physicalPosition" type="text"
+                    <ion-textarea class="left-align-input" formControlName="physicalPosition" type="text"
                                   placeholder="{{'location' | translate}}"></ion-textarea>
                 </ion-item>
                 <div class="validation-error-text" *ngIf="!form.controls.physicalPosition.valid">{{'requiredInformation' | translate}}</div>
@@ -201,3 +201,13 @@
         </ion-item-group>
     </ion-list>
 </ion-content>
+<ion-footer class="page-footer" *ngIf="!selectedIdFireHydrant">
+    <ion-navbar>
+        <ion-buttons left>
+            <button ion-button  icon-start (click)="cancelEdition()">
+                <ion-icon name="undo"></ion-icon>
+                {{'cancel' | translate}}
+            </button>
+        </ion-buttons>
+    </ion-navbar>
+</ion-footer>
